# LiveAgent

./: .env.example  .gitignore  README.md  decode_prediction.py  evdev_keys.py  keycode_mappings.py  live_agent.py  minecraft_input_recorder.py  online_sampler.py  requirements.txt  run_live.py  setup.sh  test.py
plaicraft_model/: .env.example  .gitignore  Makefile  README.md  pyproject.toml  setup.py
plaicraft_model/configs/: eval.yaml  train.yaml
plaicraft_model/configs/callbacks/: async_semantic_evaluation.yaml  deepspeed_flops_estimator.yaml  default.yaml  early_stopping.yaml  ema.yaml  model_checkpoint.yaml  model_summary.yaml  module_step_time_profiler.yaml  peak_gpu_memory.yaml  rank_info.yaml  rich_progress_bar.yaml  sync_semantic_evaluation.yaml  sync_validation.yaml
plaicraft_model/configs/data/: sample.yaml  semantic_evaluation.yaml  train.yaml  validation.yaml
plaicraft_model/configs/debug/: default.yaml  fdr.yaml  limit.yaml  overfit.yaml  profiler.yaml
plaicraft_model/configs/experiment/: sample_train_set.example.yaml
plaicraft_model/configs/extras/: default.yaml
plaicraft_model/configs/hparams_search/: plai_v1_optuna.yaml
plaicraft_model/configs/hydra/: default.yaml
plaicraft_model/configs/inference/: offline_sampler.yaml
plaicraft_model/configs/logger/: csv.yaml  many_loggers.yaml  tensorboard.yaml  (+1 more)
plaicraft_model/data/: high_quality_validation.db  semantic_evaluation.db  split_sessions.py
plaicraft_model/decode/: decode_keypress_latents.py
plaicraft_model/docs/: DATAMODULE_README.md  DATASET_DOC.md  MOE_DECODER.md  OFFLINE_SETUP.md
plaicraft_model/encode_key_press/: main.py
plaicraft_model/encodedData/: 1781643640851.db
plaicraft_model/notebooks/: multimodal_attention_positional_viz.ipynb  paper_plot_generation.ipynb
plaicraft_model/scripts/: README.md  download_models.py  eval.example.sh  train.example.sh
plaicraft_model/src/: eval.py  train.py
plaicraft_model/tests/: README.md  conftest.py  run_unit_tests.sh  submit_unit_tests.sh
(+103 files in other folders)
